--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ button {
     background-color: var(--Orange);
     color: var(--White);
     text-transform: uppercase;
-    /* padding: 1.2em 0; */
+    padding: 1em 0;
     border-radius: 60px;
 }
 button:hover {
