--- a/style.css
+++ b/style.css
@@ -18,13 +18,15 @@
 body {
     background-color: var(--VeryDarkBlue);
     min-height: 100vh;
+}
+main {
+    min-height: 95vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    position: relative;
 }
-article {
+.main-card, .thankyou-card {
     border-radius: 5%;
     background-color: var(--DarkBlue);
     color: var(--LightGrey);
@@ -126,12 +128,11 @@ input:checked + label {
     min-width: 130px;
     margin: auto;
 }
-.attribution { 
+footer { 
     font-size: 11px; 
     color: white;
     text-align: center;
-    position: absolute;
-    bottom: 10px;
+    min-height: 5vh;
 }
 .attribution a { 
     color: var(--Orange); 
