--- a/style.css
+++ b/style.css
@@ -81,7 +81,9 @@ input:checked + label {
     background-color: var(--LightGrey); 
     cursor: default; 
 }
-
+.none {
+    display: none;
+}
 .btn-submit {
     display: block;
     background-color: var(--Orange);
@@ -105,6 +107,10 @@ input:checked + label {
 .error {
     text-align: center;
     color: red;
+}
+.error-To {
+    color: var(--LightGrey);
+    text-align: center;
 }
 .thankyou-card {    
     text-align: center;
